<resources>
    <string name="app_name">RescueStitch</string>

    <!--    Generics -->
    <string name="default_text">Texte par défaut</string>
    <string name="return_button"> Retour </string>
    <string name="quit_button"> Quitter </string>
    <string name="default_username"> Experience 626 </string>

    <!--Main menu page -->
    <string name="main_menu_launch_game_button">Jouer</string>
    <string name="main_menu_join_game_button">Rejoindre</string>
    <string name="main_menu_parties_history_button">Historique</string>
    <string name="main_menu_join_game_no_wifi"> Vous devez être connecté au wifi pour jouer</string>

    <!-- History parties page   -->
    <string name="title_history_parties_page">Mes parties</string>
    <string name="title_number_turn">Tours réalisés :</string>
    <string name="title_players_game">Joueurs rencontrés </string>

    <!--  Endgame page  -->
    <string name="endgame_page_replay_button"> Rejouer</string>

    <!--    Waiting room page -->
    <string name="waiting_room_page_ready_play_button"> Pret </string>
    <string name="waiting_room_page_begin_game"> Demarrer la partie </string>
    <string name="waiting_room_title_players_list">Liste des joueurs en attente </string>
    <string name="waiting_room_page_pending"> En attente </string>
    <string name="waiting_room_game_is_not_launcheable"> Vous ne pouvez pas lancer la partie si tous les joueurs ne sont pas prêts</string>

    <!--    Join game dialog-->
    <string name="join_game_dialogue_title"> Rejoindre une partie </string>
    <string name="join_game_dialogue_ip_adress_hint"> Adresse IP </string>
    <string name="join_game_dialogue_port_hint"> Port </string>
    <string name="join_game_dialogue_no_ip_and_port_toast"> Vous ne pouvez pas joindre une partie si l\'addresse IP et le port ne sont pas définis</string>

    <!--    Username dialog -->
    <string name="username_dialog_title"> Choisir un nom de joueur</string>
    <string name="username_input_hint"> Nom joueur</string>

    <!--    Game Fragment -->
    <string name="game_activity_turn_number_title"> Nombre de tour</string>
    <string name="game_activity_turn_number"> 1</string>
    <string name="game_fragment_spectator_role"> Stich n\'a pas besoin de toi pour l\'instant</string>
    <string name="game_fragment_instructor_role"> Pour aider Stitch, trouve l\'opérateur : %1$s </string>
    <string name="game_fragment_switch_default_text"> Pompe </string>
    <string name="game_fragment_validate_operation_button"> Valider </string>

<!--    End Game Fragment -->
    <string name="end_game_title"> Oh non ! Le vaisseau de Stitch a explosé ! </string>
    <string name="end_game_nb_turn_realised"> Votre vaisseau a resisté à %1$s d\'opération </string>
    <string name="return_to_main_menu_text"> Retour au menu principal</string>


</resources>