<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    >

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="80dp"
     android:layout_marginBottom="@dimen/default_margin"
     android:gravity="center"
     >
    <TextView
        android:id="@+id/main_menu_username_text"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        android:textColor="@color/white"

        />

     <ImageView
         android:id="@+id/button_edit_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_edit"
         app:tint="@color/white"
         android:layout_marginLeft="@dimen/item_margin"
         />

 </LinearLayout>

    <Button
        android:id="@+id/main_menu_play_button"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rect_rounded_active_button"
        android:padding="@dimen/default_padding"
        android:text="@string/main_menu_launch_game_button"
        />

    <Button
        android:id="@+id/main_menu_join_game_button"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rect_rounded_active_button"
        android:padding="@dimen/default_padding"
        android:text="@string/main_menu_join_game_button" />

    <Button
        android:id="@+id/main_menu_history_button"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rect_rounded_active_button"
        android:padding="@dimen/default_padding"
        android:text="@string/main_menu_parties_history_button" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_content"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:navGraph="@navigation/nav_graph"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />


</LinearLayout>