<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/text_ip_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultTextStyle"
        android:text="127.0.0.1"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/default_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"
        android:text="@string/waiting_room_title_players_list"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_waiting_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:layout_weight="1"
        android:padding="20dp"
        tools:listitem="@layout/player_waiting_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        >

    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextStyle"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rect_rounded_disabled_button"
        android:padding="@dimen/default_padding"
        android:textColor="@color/white"
        android:text="@string/waiting_room_page_ready_play_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextStyle"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/rect_rounded_disabled_button"
        android:padding="@dimen/default_padding"
        android:textColor="@color/white"
        android:text="@string/waiting_room_page_begin_game" />




</LinearLayout>